--- a/StorageFacade/Beztek.Facade.Storage.csproj
+++ b/StorageFacade/Beztek.Facade.Storage.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <id>Beztek.Facade.Storage</id>
-    <version>1.2.5</version>
+    <version>1.2.7</version>
     <authors>Peter Thomas</authors>
     <owners>Beztek Software Solutions</owners>
     <licenseUrl>https://github.com/Beztek-Software-Solutions/storage-facade/blob/main/LICENSE</licenseUrl>
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.21.0" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.410.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="MimeTypeMapOfficial" Version="1.0.17" />
     <PackageReference Include="SMBLibrary" Version="1.5.3" />
